Mejoro POST y PATCH usuarios